Fixes to Contact and Button
Adss links to contact buttons and changes some sizes and colors.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 
 	<div id="Contact" class="container-fluid">
 		<p id="Headers"> Contact </p>
-		<i class="fa fa-github" aria-hidden="true"></i> <i class="fa fa-twitter" aria-hidden="true"></i> <i class="fa fa-linkedin" aria-hidden="true"></i>
+		<a href="https://github.com/AliceDarrow"><i class="fa fa-github info-icons" aria-hidden="true"></i></a>
+		<a href="https://twitter.com/alicemdarrow"><i class="fa fa-twitter info-icons" aria-hidden="true"></i></a>
+		<!--<i class="fa fa-linkedin" aria-hidden="true"></i> -->
 	</div>
 
 
