--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1 id="Name">Alice Darrow</h1>
 		<a href="mailto:darr.alice@gmail.com" target="_top"><p class="email">darr.alice@gmail.com</p></a>
 			<img src="img\twitterpropic - Copy.jpg" class="img-responsive img-rounded" id="main-photo" width="200" height="300"/>
-		<p id="personalStatement"> I am a junior studying computer science at the University of Florida. I am interested in educational technology, software development, and designing technology for children.</p>
+		<p id="personalStatement"> I am a senior studying computer science at the University of Florida. I am interested in educational technology, software development, and designing technology for children.</p>
   </div>
 
 	<div id="rightpanel" class="text-center col-sm-8">
